--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             </div>
         </div>
 
+        <!-- TODO: Add the version to the WASM file as an EXPORT constant and display it here after it loads. -->
         <!-- Footer (text is added upon library load.) -->
         <footer class="unselectable">Preview v1.7<br>Powered by Tinnitus library v0.4</footer>
     </section>
