Added option to configure IDs.

--- a/index.html
+++ b/index.html
@@ -123,15 +123,20 @@
                     <span id="bits-per-frame-display">4</span> bit/s
                 </label>
 
-                <!-- <div class="settings-section">
-                    <h3>Jazyk</h3>
-                    <select id="language-select">
-                        <option value="sk">Slovenčina</option>
-                        <option value="en">English</option>
-                        <option value="cs">Čeština</option>
-                    </select>
-                </div>
+                <!-- <label class="config-option">
+                    <span>Rýchlosť prenosu</span>
+                    <input id="bits-per-frame" type="range" min="1" max="8" step="1" value="4">
+                    <span id="bits-per-frame-display">4</span> bit/s
+                </label> -->
 
+                <label class="config-option">
+                    <span>ID Kanálu</span>
+                    <select id="channel-id-select">
+
+                    </select>
+                </label>
+
+                <!--
                 <div class="settings-section">
                     <h3>Súkromie</h3>
                     <label class="settings-option">
