Fixed some issues, added option to name your channels.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
                     </select>
                 </label>
 
+                <div class="config-sub-header">
+                    <h3>Pomenúvanie kanálov</h3>
+                    <label class="config-option" id="channel-name-list">
+
+                    </label>
+                </div>
+
                 <!--
                 <div class="settings-section">
                     <h3>Súkromie</h3>
