Added USB support.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
                         <input id="personalized-ads-toggle" type="checkbox">
                     </label>
                 </div> -->
+
+                <button id="connect-usb-device-button">Pripojiť USB</button>
             </div>
 
             <div id="tab-graph" class="tab">
