--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
         <!-- TODO: Add the version to the WASM file as an EXPORT constant and display it here after it loads. -->
         <!-- Footer (text is added upon library load.) -->
-        <footer class="unselectable">Preview v1.9<br>Powered by Tinnitus library v0.6</footer>
+        <footer class="unselectable">Preview v1.9p<br>Powered by Tinnitus library v0.6</footer>
     </section>
 
     <!-- Image Upload Modal -->
