Added buffer size config.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                     </label>
                 </div> -->
 
+                <label class="config-option">
+                    <span>Veľkosť Bufferu</span>
+                    <input id="buffer-size-input" type="number" min="0" max="20000" step="1" value="0">
+                </label>
+
                 <button id="connect-usb-device-button">Pripojiť USB</button>
             </div>
 
